# quickpush

./: Makefile  README.md  main.py  pyproject.toml  quickpush.py  requirements.txt
